--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "jest",
     "run:fm": "ts-node ./src/workshop/free-monads/run.ts",
     "run:tf": "ts-node ./src/workshop/tagless-final/run.ts",
-    "run:redux": "ts-node ./src/workshop/redux/run.ts"
+    "run:redux": "ts-node ./src/workshop/redux/run.ts",
+    "run:redux:saga": "ts-node ./src/workshop/redux/run-saga.ts"
   },
   "keywords": [
     "edsl",
@@ -31,7 +32,8 @@
   "dependencies": {
     "fp-ts": "^2.5.3",
     "fp-ts-contrib": "^0.1.15",
-    "redux": "4.0.5"
+    "redux": "4.0.5",
+    "redux-saga": "^1.1.3"
   },
   "jest": {
     "testEnvironment": "jsdom",
